# shard_installer

./: .gitignore  logging.yaml  meson.build
src/: main.py  meson.build  shard_installer.in
src/funtions/: bootloader.py  hostname.py  localization.py  meson.build  partition.py  shards.py  user.py
src/utils/: command.py  diskutils.py  fileutils.py  log.py  meson.build
